# prompt-lab

./: .gitignore  .prettierrc  AGENTS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  test.yml
jules-scratch/verification/: verify_launch.py
src/: App.tsx  app.tsx  constants.ts  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  lifecycle.rs  main.rs  models.rs  store.rs
src-tauri/src/api/: editor.rs  mod.rs  scrape.rs  tokenize.rs  web.rs
src-tauri/src/api/clipboard/: command.rs  lib.rs  mod.rs
src-tauri/src/api/directory/: lib.rs
src-tauri/src/api/directory/command/: list.rs  mod.rs  open.rs  pick.rs  recent.rs
src-tauri/src/api/editor/: command.rs  lib.rs  mod.rs
src-tauri/src/api/git/: architecture_diagram.mmd  command.rs  event.rs  mod.rs  status.rs  tokenize.rs  watch.rs
src-tauri/src/api/instruction/: command.rs  lib.rs
src-tauri/src/api/tree/: cache.rs  index.rs  mod.rs  render.rs  search.rs  select.rs
src-tauri/src/api/tree/render/: command.rs  lib.rs
src-tauri/src/api/tree/search/: command.rs  lib.rs  mod.rs
src-tauri/src/api/tree/select/: command.rs  lib.rs
src-tauri/src/api/web/: command.rs  favicon.rs  lib.rs  mod.rs  scrape.rs
src-tauri/src/commands/: app.rs  clipboard.rs  git.rs  instructions.rs  list_directory.rs  mod.rs  open_directory.rs  recent_folders.rs  scrape.rs  search_tree.rs  tokenize.rs  web.rs
src-tauri/src/commands/clipboard/: command.rs  lib.rs
src-tauri/src/commands/directory/: lib.rs  list.rs  mod.rs  open.rs  recent.rs
src-tauri/src/commands/directory/command/: list.rs  open.rs  recent.rs
src-tauri/src/commands/git/: command.rs  diff.rs  event.rs  mod.rs  status.rs  tokenize.rs  watch.rs
src-tauri/src/commands/instruction/: command.rs
src-tauri/src/commands/search/: cache.rs  mod.rs  search_tree.rs  tree_index.rs
src-tauri/src/commands/tree/: cache.rs  index.rs  lib.rs  mod.rs  render.rs  search.rs  select.rs
src-tauri/tests/api/: mod.rs
src-tauri/tests/api/directory/command/: mod.rs  pick.rs  recent.rs
src-tauri/tests/api/editor/: command.rs
src-tauri/tests/api/tree/search/: command.rs
src/api/: git.ts  (+6 more)
(+126 files in other folders)
