[package]
name = "contexter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "contexter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "test"] }
tauri-plugin-opener = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
tauri-plugin-store = "2"
ignore = "0.4"
tiktoken-rs = "0.7"
git2 = { version = "0.18", features = ["vendored-libgit2"] }
twars-url2md = "1.4.2" 
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
notify = "6"
uuid = { version = "1", features = ["v4"] }
